--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,18 @@
     "require": {
         "php": ">=8.0"
     },
+    "autoload": {
+        "psr-4": {
+            "HDSSolutions\\": "src/"
+        }
+    },
     "require-dev": {
         "roave/security-advisories": "dev-latest"
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
     },
     "minimum-stability": "stable",
     "prefer-stable": true,
