--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     },
     "require": {
         "php": ">=8.0",
-        "illuminate/collections": "^9.0",
+        "illuminate/collections": "^8.0|^9.0",
         "symfony/console": "^6.0"
     },
     "autoload": {
