--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
         }
     },
     "require-dev": {
-        "roave/security-advisories": "dev-latest",
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.6",
+        "roave/security-advisories": "dev-latest"
     },
     "autoload-dev": {
         "psr-4": {
