--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,12 @@
 name: PHPUnit Tests
 
 on:
-  pull_request:
   push:
-    branches:
-      - master
+    branches: ['master']
+  pull_request:
+    branches: ['*']
+  schedule:
+    - cron: '0 0 * * *'
 
 jobs:
   test:
