--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "hds-solutions/parallel-sdk",
     "description": "SDK to implement parallel php extension",
     "type": "library",
-    "license": "GPL-3.0",
+    "license": "MIT",
     "authors": [
         {
             "name": "Hermann D. Schimpf",
