--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "symfony/console": "Allows usage of a shared ProgressBar between the Workers"
     },
     "require": {
-        "php": ">=8.0"
+        "php": "^8.0"
     },
     "autoload": {
         "files": [
