--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -50,11 +50,11 @@ jobs:
       with:
         php-version: ${{ matrix.php }}
         extensions: ${{ env.extensions }}
-        ini-values: extension=parallel.so, zend_extension=opcache.so, opcache.enable_cli=1, opcache.enable=1, opcache.jit_buffer_size=64M, opcache.jit=1205, opcache.enable_file_override=1, opcache.max_accelerated_files=4000, opcache.validate_timestamps=0, opcache.interned_strings_buffer=8
+        ini-values: extension=parallel.so, zend_extension=opcache.so, opcache.enable_cli=1, opcache.jit=tracing, opcache.jit_buffer_size=64M
         coverage: none
 
     - name: Install dependencies
-      run: composer install --no-interaction --no-progress --no-suggest
+      run: composer install --no-interaction --quiet
 
     - name: Execute tests
       run: ./vendor/bin/phpunit
