FIX: Workflow job name

--- a/.github/workflows/windows-php-8.1.yml
+++ b/.github/workflows/windows-php-8.1.yml
@@ -9,7 +9,7 @@ on:
     - cron: '0 0 * * *'
 
 jobs:
-  linux-php-8.0:
+  windows_php_81:
     uses: ./.github/workflows/ci-tests.yml
     with:
       os: windows-latest
