--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     concurrency:
       group: ci-tests-php-${{ inputs.php }}
-      cancel-in-progress: false
+      cancel-in-progress: true
 
     env:
       extensions: parallel
