--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -43,7 +43,7 @@ jobs:
       with:
         php-version: ${{ inputs.php }}
         extensions: ${{ env.extensions }}
-        ini-values: extension=parallel.so, zend_extension=opcache.so, opcache.enable_cli=1, opcache.jit=tracing, opcache.jit_buffer_size=64M
+        ini-values: opcache.enable_cli=1, opcache.jit=tracing, opcache.jit_buffer_size=64M
         coverage: none
 
     - name: Install dependencies
