--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "hds-solutions/parallel-sdk",
     "description": "SDK to implement parallel php extension",
-    "version": "2.1.4",
+    "version": "3.0.0",
     "type": "library",
     "license": "MIT",
     "authors": [
@@ -27,6 +27,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.6",
+        "rector/rector": "^2.1",
         "roave/security-advisories": "dev-latest",
         "symfony/console": "^6.0"
     },
